src/main/java/parse/Parser.java
/* Parser.java */
/* Generated by: ParserGeneratorCC: Do not edit this line. Parser.java */
package parse;

import io.questdb.griffin.model.ExpressionNode;
import io.questdb.std.ObjectPool;

public class Parser implements ParserConstants {
  ObjectPool<ExpressionNode> sqlNodePool;
  public Parser() {
    this.sqlNodePool = new ObjectPool<>(ExpressionNode.FACTORY, 100);
  }

  public static ExpressionNode parse(String args) throws Exception
  {
    Parser parse = new Parser(new java.io.StringReader(args));
    ExpressionNode rst = parse.SQLStatement();
    return rst;
  }

  public ExpressionNode collapseFunctionRightLeft(CharSequence name, ExpressionNode r, ExpressionNode l, Token token) {
    ExpressionNode parent = sqlNodePool.next().of(ExpressionNode.FUNCTION, name, Integer.MIN_VALUE, token.beginColumn);
  }

  final public ExpressionNode BindVariable() throws ParseException {
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case S_BIND:{
      jj_consume_token(S_BIND);
      break;
      }
    case 64:{
      jj_consume_token(64);
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case S_NUMBER:{
        jj_consume_token(S_NUMBER);
        break;
        }
      case S_IDENTIFIER:{
        jj_consume_token(S_IDENTIFIER);
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public ExpressionNode BasicDataTypeDefinition() throws ParseException {
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case K_BOOLEAN:{
      jj_consume_token(K_BOOLEAN);
      break;
      }
    case 65:{
      jj_consume_token(65);
      break;
      }
    case 66:{
      jj_consume_token(66);
      break;
      }
    case K_CHAR:{
      jj_consume_token(K_CHAR);
      break;
      }
    case 67:{
      jj_consume_token(67);
      break;
      }
    case K_FLOAT:{
      jj_consume_token(K_FLOAT);
      break;
      }
    case 68:{
      jj_consume_token(68);
      break;
      }
    case K_STRING:{
      jj_consume_token(K_STRING);
      break;
      }
    case 69:{
      jj_consume_token(69);
      break;
      }
    case K_DATE:{
      jj_consume_token(K_DATE);
      break;
      }
    case 70:{
      jj_consume_token(70);
      break;
      }
    case K_DOUBLE:{
      jj_consume_token(K_DOUBLE);
      break;
      }
    case 71:{
      jj_consume_token(71);
      break;
      }
    case 72:{
      jj_consume_token(72);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public ExpressionNode SQLStatement() throws ParseException {ExpressionNode e;
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case 73:{
      e = InsertStatement();
{if ("" != null) return e;}
      break;
      }
    case K_SELECT:
    case 74:{
      e = QueryStatement();
{if ("" != null) return e;}
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new IllegalStateException ("Missing return statement in function");
}

  final public ExpressionNode InsertStatement() throws ParseException {
    jj_consume_token(73);
    jj_consume_token(K_INTO);
    TableName();
    if (jj_2_1(2)) {
      jj_consume_token(74);
      TableColumn();
      label_1:
      while (true) {
        switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
        case 75:{
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_1;
        }
        jj_consume_token(75);
        TableColumn();
      }
      jj_consume_token(76);
    } else {
      ;
    }
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case K_VALUES:{
      jj_consume_token(K_VALUES);
      jj_consume_token(74);
      SqlExpressionList();
      jj_consume_token(76);
      break;
      }
    case K_SELECT:
    case 74:{
      SubQuery();
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(77);
}

  final public ExpressionNode QueryStatement() throws ParseException {
    SelectStatement();
    jj_consume_token(77);
}

  final public ExpressionNode SqlExpression() throws ParseException {ExpressionNode r, l;
    r = SqlAndExpression();
    label_2:
    while (true) {
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case K_OR:{
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      jj_consume_token(K_OR);
      l = SqlAndExpression();
ExpressionNode r1 = sqlNodePool.next().of(ExpressionNode.FUNCTION, "OR", Integer.MIN_VALUE, token.beginColumn);
        r1.rhs = r;
        r1.lhs = l;
        r = r1;
    }
{if ("" != null) return r;}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public ExpressionNode SqlAndExpression() throws ParseException {ExpressionNode r, l;
    r = SqlUnaryLogicalExpression();
    label_3:
    while (true) {
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case K_AND:{
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      jj_consume_token(K_AND);
      l = SqlUnaryLogicalExpression();
r = collapseFunctionRightLeft("AND", r, l, token);
    }
{if ("" != null) return r;}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public ExpressionNode SqlUnaryLogicalExpression() throws ParseException {
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case K_NOT:{
      jj_consume_token(K_NOT);
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    SqlRelationalExpression();
}

  final public ExpressionNode SqlRelationalExpression() throws ParseException {
    SqlSimpleExpression();
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case K_BETWEEN:
    case K_IN:
    case K_IS:
    case K_LIKE:
    case K_NOT:
    case 86:
    case 87:
    case 88:
    case 89:
    case 90:{
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 86:
      case 87:
      case 88:
      case 89:
      case 90:{
        Relop();
        SqlSimpleExpression();
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        if (jj_2_2(2)) {
          SqlInClause();
        } else if (jj_2_3(2)) {
          SqlBetweenClause();
        } else if (jj_2_4(2)) {
          SqlLikeClause();
        } else {
          switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
          case K_IS:{
            IsNullClause();
            break;
            }
          default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
}

  final public ExpressionNode SqlExpressionList() throws ParseException {
    SqlExpression();
    label_4:
    while (true) {
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 75:{
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
      jj_consume_token(75);
      SqlExpression();
    }
}

  final public ExpressionNode SqlInClause() throws ParseException {
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case K_NOT:{
      jj_consume_token(K_NOT);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(K_IN);
    jj_consume_token(74);
    SqlExpressionList();
    jj_consume_token(76);
}

  final public ExpressionNode SqlBetweenClause() throws ParseException {
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case K_NOT:{
      jj_consume_token(K_NOT);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(K_BETWEEN);
    SqlSimpleExpression();
    jj_consume_token(K_AND);
    SqlSimpleExpression();
}

  final public ExpressionNode SqlLikeClause() throws ParseException {
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case K_NOT:{
      jj_consume_token(K_NOT);
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    jj_consume_token(K_LIKE);
    SqlSimpleExpression();
}

  final public ExpressionNode IsNullClause() throws ParseException {
    jj_consume_token(K_IS);
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case K_NOT:{
      jj_consume_token(K_NOT);
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(K_NULL);
}

  final public ExpressionNode SqlSimpleExpression() throws ParseException {
    SqlMultiplicativeExpression();
    label_5:
    while (true) {
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 78:
      case 79:
      case 80:{
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_5;
      }
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 78:{
        jj_consume_token(78);
        break;
        }
      case 79:{
        jj_consume_token(79);
        break;
        }
      case 80:{
        jj_consume_token(80);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      SqlMultiplicativeExpression();
    }
}

  final public ExpressionNode SqlMultiplicativeExpression() throws ParseException {
    SqlUnaryExpression();
    label_6:
    while (true) {
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case S_IDENTIFIER:
      case 81:
      case 82:{
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_6;
      }
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 81:{
        jj_consume_token(81);
        break;
        }
      case 82:{
        jj_consume_token(82);
        break;
        }
      case S_IDENTIFIER:{
        ID("MOD");
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      SqlUnaryExpression();
    }
}

  final public ExpressionNode SqlUnaryExpression() throws ParseException {
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case 78:
    case 79:{
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 78:{
        jj_consume_token(78);
        break;
        }
      case 79:{
        jj_consume_token(79);
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      SqlPrimaryExpression();
      break;
      }
    case K_CASE:
    case K_CAST:
    case K_NULL:
    case S_NUMBER:
    case S_IDENTIFIER:
    case S_BIND:
    case S_CHAR_LITERAL:
    case S_QUOTED_IDENTIFIER:
    case 64:
    case 74:
    case 83:{
      SqlPrimaryExpression();
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public ExpressionNode SqlPrimaryExpression() throws ParseException {
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case S_NUMBER:{
      jj_consume_token(S_NUMBER);
      break;
      }
    case S_CHAR_LITERAL:{
      jj_consume_token(S_CHAR_LITERAL);
      break;
      }
    case K_NULL:{
      jj_consume_token(K_NULL);
      break;
      }
    case K_CASE:{
      SQLCaseExpression();
      break;
      }
    case 74:{
      jj_consume_token(74);
      if (jj_2_5(3)) {
        SelectStatement();
      } else {
        switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
        case K_CASE:
        case K_CAST:
        case K_NOT:
        case K_NULL:
        case S_NUMBER:
        case S_IDENTIFIER:
        case S_BIND:
        case S_CHAR_LITERAL:
        case S_QUOTED_IDENTIFIER:
        case 64:
        case 74:
        case 78:
        case 79:
        case 83:{
          SqlExpression();
          break;
          }
        default:
          jj_la1[23] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(76);
      break;
      }
    case S_BIND:
    case 64:{
      BindVariable();
      break;
      }
    default:
      jj_la1[25] = jj_gen;
      if (jj_2_6(2)) {
        SQLCastExpression();
      } else if (jj_2_7(2147483647)) {
        IntervalExpression();
      } else if (jj_2_8(2)) {
        switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
        case S_IDENTIFIER:{
          jj_consume_token(S_IDENTIFIER);
          break;
          }
        case 83:{
          jj_consume_token(83);
          break;
          }
        default:
          jj_la1[24] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(84);
        ID("FOUND|NOTFOUND|ISOPEN|ROWCOUNT");
      } else if (jj_2_9(2147483647)) {
        FunctionCall();
      } else {
        switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
        case S_IDENTIFIER:
        case S_QUOTED_IDENTIFIER:{
          ObjectReference();
          break;
          }
        default:
          jj_la1[26] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
}

  final public ExpressionNode TableColumn() throws ParseException {
    ObjectReference();
}

  final public ExpressionNode ObjectName() throws ParseException {
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case S_IDENTIFIER:{
      jj_consume_token(S_IDENTIFIER);
{if ("" != null) return this.sqlNodePool.expressionNodePool.next().of(ExpressionNode.LITERAL, token.image, token.beginColumn);}
      break;
      }
    case S_QUOTED_IDENTIFIER:{
      jj_consume_token(S_QUOTED_IDENTIFIER);
{if ("" != null) return this.sqlNodePool.expressionNodePool.next().of(ExpressionNode.LITERAL, token.image.substring(1, token.image.length() - 1));}
      break;
      }
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new IllegalStateException ("Missing return statement in function");
}

  final public CharSequence TNSName() throws ParseException {StringBuilder name = new StringBuilder();
    jj_consume_token(S_IDENTIFIER);
name.append(token.image);
    label_7:
    while (true) {
      switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
      case 85:{
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        break label_7;
      }
      jj_consume_token(85);
      jj_consume_token(S_IDENTIFIER);
name.append(".").append(token.image);
    }
{if ("" != null) return name.toString();}
    throw new IllegalStateException ("Missing return statement in function");
}

  final public ExpressionNode Relop() throws ParseException {
    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
    case 86:{
      jj_consume_token(86);
      break;
      }
    case 87:{
      jj_consume_token(87);
      jj_consume_token(86);
      break;
      }
    case 88:{
      jj_consume_token(88);
      break;
      }
    default:
      jj_la1[29] = jj_gen;
      if (jj_2_10(2)) {
        jj_consume_token(89);
        jj_consume_token(86);
      } else {
        switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
        case 89:{
          jj_consume_token(89);
          break;
          }
        default:
          jj_la1[30] = jj_gen;
          if (jj_2_11(2)) {
            jj_consume_token(90);
            jj_consume_token(89);
          } else if (jj_2_12(2)) {
            jj_consume_token(90);
            jj_consume_token(86);
          } else {
            switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
            case 90:{
              jj_consume_token(90);
              break;
              }
            default:
              jj_la1[31] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    }
}
